# biodynamo-flocking-simulation

./: .gitignore  2do.txt  CMakeLists.txt  Phi_a.ggb  Phi_b.ggb  README.md  bdm.json  bdm.toml  box_sphere_setup.pvsm  centre_of_mass_force.ggb  changelog.txt  flocking2_functions.ggb  notizen.txt  obst.pvsm  obstacles.pvd  obstacles_paraview.pvd  sphere.pvsm  wind_field.h  wolrd_geometry_conversion.py  world_geometry.gdml
.github/workflows/: macos-ci.yml  ubuntu-ci.yml
GGB_Plots/: Phi_b.ggb  centre_of_mass_force.ggb  flocking2_functions.ggb
documentation/: How2_Replicate_Conducted_Simulations.txt
output/: obstacles.pvsm
output/data_free_space/: avg_dist_(Figure 10).m
output/data_wind/: avg_vel_(Figure17).m  wind_deacc.csv  wind_resistance_(Figure 14).m
output/flocking_simulation/: flocking_simulation.pvsm  metadata  simulation_info.json
output/flocking_simulation/2021-08-24-15:36:55/: metadata
src/: UpdateOp.h  behavior.h  boid.cc  boid.h  changelog.txt  direction_array.h  flocking.cc  flocking.h  flocking_simulation.cc  flocking_simulation.h  main.cc  sim_param.h  update_operation.h  world_geometry.cc  world_geometry.h
src/pywind/: README.md  download_repository.sh  main.py  required_pypackages.txt
src/pywind/data/: wind.npy  wind.vti
